# verifiers

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
.codex/environments/: environment.toml
.cursor/: BUGBOT.md
.github/workflows/: publish-envs.yml  publish-verifiers-rl.yml  style.yml  tag-and-release.yml  test.yml
assets/agents/: common_best_practices.md  compilation_design.md  end_user_best_practices.md  repo_development_best_practices.md
assets/release/: RELEASE_v0.1.10.dev1.md  RELEASE_v0.1.10.dev3.md  RELEASE_v0.1.10.md  (+8 more)
configs/: endpoints.py
docs/: ROLLOUT_MONITORING.md  development.md  environments.md  evaluation.md  faqs.md  overview.md  reference.md  training.md
environments/: AGENTS.md  README.md
environments/mcp_envs/sandbox_mcp/: README.md  pyproject.toml  sandbox_mcp.py
environments/new_opencode_math/: README.md  new_opencode_math.py  pyproject.toml
environments/opencode_harbor/: README.md  opencode_harbor.py  opencode_harbor_experimental.py  prompt.txt  pyproject.toml
environments/opencode_harbor/tasks/build-cython-ext/: task.toml
environments/opencode_harbor/tasks/chess-best-move/: task.toml
environments/opencode_harbor/tasks/configure-git-webserver/: task.toml
environments/opencode_harbor/tasks/fix-code-vulnerability/: task.toml
environments/opencode_harbor/tasks/log-summary-date-ranges/: task.toml
environments/opencode_harbor/tasks/polyglot-c-py/: task.toml
environments/opencode_harbor/tasks/qemu-alpine-ssh/: task.toml
environments/opencode_harbor/tasks/qemu-startup/: task.toml
environments/opencode_harbor/tasks/regex-log/: task.toml
environments/opencode_harbor/tasks/sqlite-with-gcov/: task.toml
environments/openenv_echo/: README.md  openenv_echo.py  pyproject.toml
environments/openenv_echo/proj/: .build.json  pyproject.toml
examples/: monitor_rollout_example.py  quick_monitor_test.py
refactor_proposal/: README.md  __init__.py
scripts/: sync.py
src/: rollout_monitor.py
tests/: README.md  conftest.py  test_build_script.py  test_cli_agent_env.py  test_client_auth_errors.py  test_client_config.py  test_client_multimodal_types.py  test_composable_env.py  test_core.py  test_decorator_ranks.py  test_endpoint_registry.py  test_env_group.py  test_env_server.py  test_environment.py  test_environment_extra.py  test_envs.py  test_eval_cli.py  test_eval_display.py  test_eval_utils.py  test_failure_tracking.py  test_gepa_cli.py  test_gym_env.py  test_imports.py  test_install_utils.py  test_interception_utils.py  test_math_rubric.py  test_message_utils.py  test_message_utils_audio.py  test_multiturn_env.py  test_nemorl_client.py  test_new_sandbox_env.py  test_openai_chat_completions_token_client.py  test_opencode_harbor.py  test_opencode_rlm_env.py  test_path_utils.py  test_prime_plugin.py  test_renderer_client.py  test_resource_manager.py  test_rlm_env.py  test_rollout_gateway_env.py  (+11 more)
verifiers/: AGENTS.md  __init__.py  decorators.py  errors.py  telemetry.py  types.py
(+221 files in other folders)
