[project]
name = "new-opencode-math"
description = "Solve math problems using OpenCode agent with experimental resource management"
tags = ["math", "opencode", "multi-turn", "experimental"]
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "verifiers>=0.1.11.dev0",
    "math-verify>=0.8.0",
]

[tool.uv.sources]
verifiers = { path = "../..", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["new_opencode_math.py", "pyproject.toml"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.verifiers.eval]
num_examples = 5
rollouts_per_example = 3
