[project]
name = "opencode-harbor"
description = "Opencode agent on Harbor tasks"
license = "MIT"
tags = ["eval", "cli_agent"]
version = "0.1.1"
requires-python = ">=3.10"
dependencies = [
    "verifiers",
    "prime-sandboxes>=0.2.10",
    "tomli>=2.3.0",
]

[tool.uv.sources]
verifiers = { path = "../..", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["opencode_harbor.py", "opencode_harbor_experimental.py", "pyproject.toml", "tasks/**/*"] 

[tool.verifiers.eval]
num_examples = 5
rollouts_per_example = 3

[tool.ruff]
exclude = ["tasks/**"]
