[project]
name = "opencode-harbor"
description = "Opencode agent on Harbor tasks"
license = "MIT"
tags = ["eval", "cli_agent"]
version = "0.1.1"
requires-python = ">=3.10"
dependencies = [
    "verifiers>=0.1.10.dev4",
    "prime-sandboxes>=0.2.10",
    "tomli>=2.3.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["opencode_harbor.py", "pyproject.toml", "prompt.txt", "tasks/**/*"]

[tool.verifiers.eval]
num_examples = 5
rollouts_per_example = 3

[tool.ruff]
exclude = ["tasks/**"]
