[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sandbox-mcp-env"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "verifiers>=0.1.4",
    "mcp>=1.14.1",
    "prime-sandboxes",
]

[project.scripts]
sandbox-mcp-env = "sandbox_mcp:load_environment"
